--- a/Clash/config/ACL4SSR_Online_Full_MultiMode.ini
+++ b/Clash/config/ACL4SSR_Online_Full_MultiMode.ini
@@ -47,7 +47,7 @@ ruleset=🐟 漏网之鱼,[]FINAL
 ;设置规则标志位
 
 ;设置分组标志位
-custom_proxy_group=🚀 线路选择`select`[]♻️ 自动选择`[]🔯 故障转移`[]🚀 手动切换`[]🇭🇰 香港线路`[]🇺🇲 美国线路`[]🇸🇬 狮城线路`[]🇪🇺 欧洲线路`[]🇯🇵 日本线路`[]🇰🇷 韩国线路`[]🔮 负载均衡`[]DIRECT
+custom_proxy_group=🚀 线路选择`select`[]♻️ 自动选择`[]🚀 手动切换`[]🇭🇰 香港线路`[]🇺🇲 美国线路`[]🇸🇬 狮城线路`[]🇪🇺 欧洲线路`[]🇯🇵 日本线路`[]🇰🇷 韩国线路`[]🔯 故障转移`[]🔮 负载均衡`[]DIRECT
 custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🚀 手动切换`select`.*
 custom_proxy_group=🇭🇰 香港线路`url-test`(港|HK|hk|Hong Kong|HongKong|hongkong)`http://www.gstatic.com/generate_204`60,,10
