--- a/Clash/config/ACL4SSR_Online_Full_MultiMode.ini
+++ b/Clash/config/ACL4SSR_Online_Full_MultiMode.ini
@@ -47,11 +47,11 @@ ruleset=🐟 漏网之鱼,[]FINAL
 ;设置规则标志位
 
 ;设置分组标志位
-custom_proxy_group=❤️ 选择线路`select`[]♻️ 自动选择`[]✋️ 手动切换`[]🇭🇰 香港线路`[]🇺🇲 美国线路`[]🇸🇬 狮城线路`[]🇪🇺 欧洲线路`[]🇯🇵 日本线路`[]🇰🇷 韩国线路`[]🔯 故障转移`[]🔮 负载均衡`[]DIRECT
+custom_proxy_group=❤️ 选择线路`select`[]♻️ 自动选择`[]✋️ 手动切换`[]🇺🇲 美国线路`[]🇭🇰 香港线路`[]🇸🇬 狮城线路`[]🇪🇺 欧洲线路`[]🇯🇵 日本线路`[]🇰🇷 韩国线路`[]🔯 故障转移`[]🔮 负载均衡`[]DIRECT
 custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=✋️ 手动切换`select`.*
+custom_proxy_group=🇺🇲 美国线路`url-test`(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States)`http://www.gstatic.com/generate_204`120,,25
 custom_proxy_group=🇭🇰 香港线路`url-test`(港|HK|hk|Hong Kong|HongKong|hongkong)`http://www.gstatic.com/generate_204`60,,10
-custom_proxy_group=🇺🇲 美国线路`url-test`(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States)`http://www.gstatic.com/generate_204`200,,25
 custom_proxy_group=🇸🇬 狮城线路`url-test`(新加坡|坡|狮城|SG|Singapore|SIN)`http://www.gstatic.com/generate_204`200,,25
 custom_proxy_group=🇪🇺 欧洲线路`url-test`(AT|BE|BG|HR|CY|CZ|DK|EE|FI|FR|DE|GR|HU|IE|IT|LV|LT|LU|MT|NL|PL|PT|RO|SK|SI|ES|SE|UK|GB)`http://www.gstatic.com/generate_204`300,,30
 custom_proxy_group=🇯🇵 日本线路`url-test`(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|[^-]日|JP|Japan)`http://www.gstatic.com/generate_204`300,,25
